--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
     "core-js": "^2.5.4",
-    "nativescript-angular": "~8.0.1",
+    "nativescript-angular": "^8.2.1",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.5.0",
     "tns-core-modules": "~6.0.0",
