--- a/App_Resources/Android/app.gradle
+++ b/App_Resources/Android/app.gradle
@@ -8,7 +8,8 @@
 android {  
   defaultConfig {  
     generatedDensities = []
-    applicationId = "__PACKAGE__" 
+    applicationId = "org.nativescript.raceorg"
+    multiDexEnabled = true
     
     //override supported platforms
     // ndk {
@@ -19,5 +20,12 @@ android {
   }  
   aaptOptions {  
     additionalParameters "--no-version-vectors"  
-  }  
+  }
+    dexOptions {
+      javaMaxHeapSize "4g"
+    }
 } 
+
+dependencies {
+  implementation 'com.android.support:multidex:1.0.3'
+}
