--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "race-org",
   "nativescript": {
-    "id": "org.nativescript.raceorg"
+    "id": "org.nativescript.raceorg",
+    "tns-android": {
+      "version": "6.1.0"
+    }
   },
   "version": "0.0.0",
   "scripts": {
@@ -18,26 +21,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.1",
-    "@angular/common": "~8.0.1",
-    "@angular/compiler": "~8.0.1",
-    "@angular/core": "~8.0.1",
-    "@angular/forms": "~8.0.1",
+    "@angular/animations": "^8.2.6",
+    "@angular/cdk": "^8.2.0",
+    "@angular/common": "~8.2.6",
+    "@angular/compiler": "~8.2.6",
+    "@angular/core": "~8.2.6",
+    "@angular/fire": "^5.2.1",
+    "@angular/forms": "~8.2.6",
     "@angular/http": "~8.0.0-beta.10",
-    "@angular/platform-browser": "~8.0.1",
-    "@angular/platform-browser-dynamic": "~8.0.1",
-    "@angular/router": "~8.0.1",
+    "@angular/material": "^8.2.0",
+    "@angular/platform-browser": "~8.2.6",
+    "@angular/platform-browser-dynamic": "~8.2.6",
+    "@angular/router": "~8.2.6",
     "core-js": "^2.5.4",
+    "firebase": "^6.6.1",
+    "moment": "^2.24.0",
     "nativescript-angular": "^8.2.1",
+    "nativescript-exit": "^1.0.1",
+    "nativescript-localize": "^4.2.0",
+    "nativescript-nfc": "^4.0.3",
+    "nativescript-plugin-firebase": "^9.1.1",
+    "nativescript-theme-core": "^2.0.20",
+    "nativescript-ui-listview": "^7.0.5",
+    "nativescript-ui-sidedrawer": "^7.0.1",
+    "ngx-material-timepicker": "^5.1.0",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.5.0",
     "tns-core-modules": "~6.0.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular/cli": "~8.0.3",
-    "@angular/compiler-cli": "~8.0.1",
-    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/cli": "~8.3.4",
+    "@angular/compiler-cli": "~8.2.6",
+    "@angular-devkit/build-angular": "~0.803.4",
     "@nativescript/schematics": "~0.7.0",
     "@nativescript/tslint-rules": "~0.0.2",
     "@types/jasmine": "~3.3.8",
@@ -55,7 +71,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3",
+    "typescript": "~3.5.3",
     "node-sass": "^4.7.1"
   }
 }
