--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@angular/compiler": "~8.2.6",
     "@angular/core": "~8.2.6",
     "@angular/fire": "^5.2.1",
-    "@angular/forms": "~8.2.6",
+    "@angular/forms": "^8.2.6",
     "@angular/http": "~8.0.0-beta.10",
     "@angular/material": "^8.2.0",
     "@angular/platform-browser": "~8.2.6",
@@ -44,8 +44,10 @@
     "nativescript-theme-core": "^2.0.20",
     "nativescript-ui-listview": "^7.0.5",
     "nativescript-ui-sidedrawer": "^7.0.1",
+    "ng-recaptcha": "^5.0.0",
     "ngx-material-timepicker": "^5.1.0",
     "reflect-metadata": "~0.1.12",
+    "request": "^2.88.0",
     "rxjs": "~6.5.0",
     "tns-core-modules": "~6.0.0",
     "zone.js": "~0.9.1"
