--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "nativescript-ui-sidedrawer": "^7.0.1",
     "ng-recaptcha": "^5.0.0",
     "ngx-material-timepicker": "^5.1.0",
+    "ngx-order-pipe": "^2.0.4",
     "reflect-metadata": "~0.1.12",
     "request": "^2.88.0",
     "rxjs": "~6.5.0",
