--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "firebase": "^6.6.1",
     "moment": "^2.24.0",
     "nativescript-angular": "^8.2.1",
+    "nativescript-appversion": "^1.4.2",
     "nativescript-exit": "^1.0.1",
     "nativescript-localize": "^4.2.0",
     "nativescript-nfc": "^4.0.3",
     "nativescript-phone": "^1.4.0",
     "nativescript-plugin-firebase": "^9.1.1",
+    "nativescript-sqlite": "^2.3.3",
     "nativescript-theme-core": "^2.0.20",
     "nativescript-ui-listview": "^7.0.5",
     "nativescript-ui-sidedrawer": "^7.0.1",
