--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       "es2017",
       "dom",
       "es6",
-      "es2015.iterable"
+      "es2015.iterable",
+      "es2018.regexp"
     ],
     "baseUrl": ".",
     "paths": {
