--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "moment": "^2.24.0",
     "nativescript-angular": "^8.2.1",
     "nativescript-appversion": "^1.4.2",
+    "nativescript-background-http": "^4.2.0",
     "nativescript-email": "^1.5.5",
     "nativescript-exit": "^1.0.1",
     "nativescript-localize": "^4.2.0",
