--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "@angular/platform-browser": "~8.2.6",
     "@angular/platform-browser-dynamic": "~8.2.6",
     "@angular/router": "~8.2.6",
+    "@types/lodash": "^4.14.141",
     "angular-2-local-storage": "^3.0.2",
     "angular2-csv": "^0.2.9",
     "core-js": "^2.5.4",
     "firebase": "^6.6.1",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "nativescript-angular": "^8.2.1",
     "nativescript-appversion": "^1.4.2",
