--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "angular2-csv": "^0.2.9",
     "core-js": "^2.5.4",
     "firebase": "^6.6.1",
+    "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
     "nativescript-angular": "^8.2.1",
     "nativescript-appversion": "^1.4.2",
     "nativescript-background-http": "^4.2.0",
