--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "angular2-csv": "^0.2.9",
     "core-js": "^2.5.4",
     "firebase": "^6.6.2",
+    "google-timezones-json": "^1.0.2",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
+    "mat-select-filter": "^2.3.6",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
     "nativescript-angular": "^8.2.1",
