--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/forms": "^8.2.6",
     "@angular/http": "~8.0.0-beta.10",
     "@angular/material": "^8.2.0",
+    "@angular/material-moment-adapter": "^8.2.3",
     "@angular/platform-browser": "~8.2.6",
     "@angular/platform-browser-dynamic": "~8.2.6",
     "@angular/router": "~8.2.6",
@@ -45,7 +46,6 @@
     "google-timezones-json": "^1.0.2",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
-    "mat-select-filter": "^2.3.6",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
     "nativescript-angular": "^8.2.1",
@@ -63,6 +63,7 @@
     "nativescript-ui-sidedrawer": "^7.0.1",
     "ng-matero": "^0.4.2",
     "ng-recaptcha": "^5.0.0",
+    "ngx-mat-select-search": "^1.8.0",
     "ngx-material-timepicker": "^5.1.0",
     "ngx-order-pipe": "^2.0.4",
     "ngx-progressbar": "^2.1.1",
