--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "nativescript": {
     "id": "org.nativescript.raceorg",
     "tns-android": {
-      "version": "6.1.0"
+      "version": "6.1.2"
     }
   },
   "version": "0.0.0",
@@ -21,84 +21,85 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.6",
-    "@angular/cdk": "^8.2.0",
-    "@angular/common": "~8.2.6",
-    "@angular/compiler": "~8.2.6",
-    "@angular/core": "~8.2.6",
+    "@angular/animations": "~8.2.11",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "~8.2.11",
+    "@angular/compiler": "~8.2.11",
+    "@angular/core": "~8.2.11",
     "@angular/fire": "^5.2.1",
     "@angular/flex-layout": "^8.0.0-beta.27",
-    "@angular/forms": "^8.2.6",
+    "@angular/forms": "~8.2.11",
     "@angular/http": "~8.0.0-beta.10",
-    "@angular/material": "^8.2.0",
+    "@angular/material": "^8.2.3",
     "@angular/material-moment-adapter": "^8.2.3",
-    "@angular/platform-browser": "~8.2.6",
-    "@angular/platform-browser-dynamic": "~8.2.6",
-    "@angular/router": "~8.2.6",
-    "@ng-select/ng-select": "^3.0.7",
+    "@angular/platform-browser": "~8.2.11",
+    "@angular/platform-browser-dynamic": "~8.2.11",
+    "@angular/router": "~8.2.11",
+    "@ng-select/ng-select": "^3.3.0",
     "@ngx-progressbar/core": "^5.3.2",
     "@ngx-progressbar/router": "^5.3.2",
-    "@types/lodash": "^4.14.141",
+    "@types/lodash": "^4.14.144",
     "angular-2-local-storage": "^3.0.2",
     "angular2-csv": "^0.2.9",
-    "core-js": "^2.5.4",
-    "firebase": "^6.6.2",
+    "core-js": "^3.3.3",
+    "firebase": "^7.2.1",
     "google-timezones-json": "^1.0.2",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "moment-timezone": "^0.5.26",
-    "nativescript-angular": "^8.2.1",
+    "moment-timezone": "^0.5.27",
+    "nativescript": "^6.1.2",
+    "nativescript-angular": "^8.2.2",
     "nativescript-appversion": "^1.4.2",
     "nativescript-background-http": "^4.2.0",
     "nativescript-email": "^1.5.5",
     "nativescript-exit": "^1.0.1",
     "nativescript-localize": "^4.2.0",
-    "nativescript-nfc": "^4.0.3",
-    "nativescript-phone": "^1.4.0",
-    "nativescript-plugin-firebase": "^9.1.1",
+    "nativescript-nfc": "^4.0.4",
+    "nativescript-phone": "^1.4.1",
+    "nativescript-plugin-firebase": "^10.1.0",
     "nativescript-sqlite": "^2.3.3",
-    "nativescript-theme-core": "^2.0.20",
-    "nativescript-ui-listview": "^7.0.5",
-    "nativescript-ui-sidedrawer": "^7.0.1",
-    "ng-matero": "^0.4.2",
+    "nativescript-theme-core": "^2.0.24",
+    "nativescript-ui-listview": "^7.1.0",
+    "nativescript-ui-sidedrawer": "^7.0.4",
+    "ng-matero": "^0.7.0",
     "ng-recaptcha": "^5.0.0",
-    "ngx-mat-select-search": "^1.8.0",
-    "ngx-material-timepicker": "^5.1.0",
+    "ngx-mat-select-search": "^2.0.0",
+    "ngx-material-timepicker": "^5.2.1",
     "ngx-order-pipe": "^2.0.4",
     "ngx-progressbar": "^2.1.1",
     "ngx-select": "0.0.1",
-    "reflect-metadata": "~0.1.12",
+    "reflect-metadata": "~0.1.13",
     "request": "^2.88.0",
-    "rxjs": "^6.4.0",
-    "rxjs-compat": "^6.4.0",
+    "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.5.3",
     "screenfull": "^5.0.0",
-    "tns-core-modules": "~6.0.0",
-    "zone.js": "~0.9.1"
+    "tns-core-modules": "^6.1.2",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.4",
-    "@angular/cli": "~8.3.4",
-    "@angular/compiler-cli": "~8.2.6",
-    "@nativescript/schematics": "~0.7.0",
-    "@nativescript/tslint-rules": "~0.0.2",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
+    "@angular-devkit/build-angular": "~0.803.13",
+    "@angular/cli": "~8.3.13",
+    "@angular/compiler-cli": "8.2.11",
+    "@nativescript/schematics": "~0.7.2",
+    "@nativescript/tslint-rules": "~0.0.4",
+    "@types/jasmine": "~3.4.4",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "~12.11.5",
+    "codelyzer": "^5.2.0",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma": "~4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "nativescript-dev-webpack": "~1.0.0",
-    "node-sass": "^4.7.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "nativescript-dev-webpack": "^1.2.1",
+    "node-sass": "^4.12.0",
     "parse5": "^5.1.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "protractor": "~5.4.2",
+    "ts-node": "~8.4.1",
+    "tslint": "~5.20.0",
+    "typescript": "^3.5.3"
   }
 }
