--- a/firebase.nativescript.json
+++ b/firebase.nativescript.json
@@ -1,18 +1,19 @@
 {
-    "external_push_client_only": false,
     "using_ios": false,
     "using_android": true,
+    "analytics": false,
     "firestore": true,
-    "realtimedb": true,
+    "realtimedb": false,
     "authentication": true,
     "remote_config": false,
     "performance_monitoring": false,
+    "external_push_client_only": false,
     "messaging": false,
     "in_app_messaging": false,
     "crashlytics": false,
     "storage": false,
     "functions": false,
-    "facebook_auth": false,
+    "facebook_auth": true,
     "google_auth": true,
     "admob": false,
     "dynamic_links": false,
