--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,6 +5,12 @@
     "module": "esNext",
     "types": [],
     "paths": {
+      "core-js/es7/reflect": [
+        "./node_modules/core-js/proposals/reflect-metadata"
+      ],
+      "core-js/es6/": [
+        "./node_modules/core-js/es/"
+      ],
       "@src/*": [
         "src/*.web",
         "src/*"
