--- a/App_Resources/Android/app.gradle
+++ b/App_Resources/Android/app.gradle
@@ -29,3 +29,7 @@ android {
 dependencies {
   implementation 'com.android.support:multidex:1.0.3'
 }
+
+configurations {
+    compile.exclude group: 'com.google.zxing'
+}
