--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "nativescript-angular": "^8.2.2",
     "nativescript-appversion": "^1.4.2",
     "nativescript-background-http": "^4.2.0",
+    "nativescript-barcodescanner": "^3.4.0",
     "nativescript-email": "^1.5.5",
     "nativescript-exit": "^1.0.1",
     "nativescript-localize": "^4.2.0",
