--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "ngx-order-pipe": "^2.0.4",
     "ngx-progressbar": "^2.1.1",
     "ngx-select": "0.0.1",
+    "ngx-toastr": "^11.1.2",
+    "photoviewer": "^3.4.0",
     "reflect-metadata": "~0.1.13",
     "request": "^2.88.0",
     "rxjs": "^6.5.3",
