--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "@ng-select/ng-select": "^3.3.0",
     "@ngx-progressbar/core": "^5.3.2",
     "@ngx-progressbar/router": "^5.3.2",
+    "@nstudio/nativescript-snackbar": "^1.1.1",
     "@types/lodash": "^4.14.144",
     "angular-2-local-storage": "^3.0.2",
     "angular2-csv": "^0.2.9",
+    "angular2-qrcode": "^2.0.3",
     "core-js": "^3.3.3",
     "firebase": "^7.2.1",
     "google-timezones-json": "^1.0.2",
