--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "nativescript-barcodescanner": "^3.4.0",
     "nativescript-email": "^1.5.5",
     "nativescript-exit": "^1.0.1",
+    "nativescript-insomnia": "^1.2.3",
     "nativescript-localize": "^4.2.0",
     "nativescript-nfc": "^4.0.4",
     "nativescript-phone": "^1.4.1",
