--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "angular-2-local-storage": "^3.0.2",
     "angular2-csv": "^0.2.9",
     "angular2-qrcode": "^2.0.3",
+    "chart.js": "^2.9.2",
     "core-js": "^3.3.3",
     "firebase": "^7.2.1",
     "google-timezones-json": "^1.0.2",
@@ -68,6 +69,7 @@
     "nativescript-ui-sidedrawer": "^7.0.4",
     "ng-matero": "^0.7.0",
     "ng-recaptcha": "^5.0.0",
+    "ng2-charts": "^2.3.0",
     "ngx-mat-select-search": "^2.0.0",
     "ngx-material-timepicker": "^5.2.1",
     "ngx-order-pipe": "^2.0.4",
