--- a/functions/package.json
+++ b/functions/package.json
@@ -14,16 +14,16 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/cors": "^2.8.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "firebase-admin": "^8.0.0",
-    "firebase-functions": "^3.1.0",
-    "querystring": "^0.2.0",
-    "request": "^2.88.0"
+    "firebase-admin": "^8.6.0",
+    "firebase-functions": "^3.3.0"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "firebase-functions-test": "^0.1.6"
   },
   "private": true
 }
