--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "nativescript": {
     "id": "org.nativescript.raceorg",
     "tns-android": {
-      "version": "6.1.2"
+      "version": "6.3.0"
     }
   },
   "version": "0.0.0",
@@ -35,6 +35,7 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@nativescript/core": "^6.3.2",
     "@ng-select/ng-select": "^3.3.0",
     "@ngx-progressbar/core": "^5.3.2",
     "@ngx-progressbar/router": "^5.3.2",
@@ -51,8 +52,8 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
-    "nativescript": "^6.1.2",
-    "nativescript-angular": "^8.2.2",
+    "nativescript": "^6.3.0",
+    "nativescript-angular": "^8.20.3",
     "nativescript-appversion": "^1.4.2",
     "nativescript-background-http": "^4.2.0",
     "nativescript-barcodescanner": "^3.4.0",
@@ -60,9 +61,9 @@
     "nativescript-exit": "^1.0.1",
     "nativescript-insomnia": "^1.2.3",
     "nativescript-localize": "^4.2.0",
-    "nativescript-nfc": "^4.0.4",
+    "nativescript-nfc": "^4.1.0",
     "nativescript-phone": "^1.4.1",
-    "nativescript-plugin-firebase": "^10.1.0",
+    "nativescript-plugin-firebase": "^10.3.2",
     "nativescript-sqlite": "^2.3.3",
     "nativescript-theme-core": "^2.0.24",
     "nativescript-ui-listview": "^8.0.1",
@@ -84,13 +85,13 @@
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
     "screenfull": "^5.0.0",
-    "tns-core-modules": "^6.1.2",
+    "tns-core-modules": "^6.3.2",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.13",
     "@angular/cli": "~8.3.13",
-    "@angular/compiler-cli": "8.2.11",
+    "@angular/compiler-cli": "8.2.0",
     "@nativescript/schematics": "~0.7.2",
     "@nativescript/tslint-rules": "~0.0.4",
     "@types/jasmine": "~3.4.4",
@@ -104,7 +105,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "nativescript-dev-webpack": "^1.2.1",
+    "nativescript-dev-webpack": "^1.4.0",
     "node-sass": "^4.12.0",
     "parse5": "^5.1.0",
     "protractor": "~5.4.2",
