--- a/package.json
+++ b/package.json
@@ -52,9 +52,10 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
-    "nativescript": "^6.3.0",
+    "nativescript": "^6.3.0-2019-12-19-120724-14051",
     "nativescript-angular": "^8.20.3",
     "nativescript-appversion": "^1.4.2",
+    "nativescript-audio": "^5.0.5",
     "nativescript-background-http": "^4.2.0",
     "nativescript-barcodescanner": "^3.4.0",
     "nativescript-email": "^1.5.5",
